# fastapi_sample

./: .env_example  .gitignore  README.md  compose.yml  pyproject.toml
docker/python/local/: Dockerfile
src/: alembic.ini  alembic_test.ini  config.py  database.py  main.py
src/cruds/: user.py
src/migrations/: env.py
src/migrations/versions/: fdc551a9c988_create_tables.py
src/models/: user.py
src/routers/: sample.py  user.py
src/schemas/: common.py  sample.py  user.py
test/: test_main.py  test_settings.py  test_user.py
